feat: allow crew replacement after leaving a room
